--- a/ArbolitoU/Pages/FileExtractor.axaml
+++ b/ArbolitoU/Pages/FileExtractor.axaml
@@ -8,9 +8,9 @@
     <Grid Margin="20">
         <StackPanel>
             <StackPanel Margin="10, 10, 0,0">
-                <Label Margin="-5,0,0,10" FontSize="30" FontWeight="DemiBold">Extraction Settings</Label>
-                <CheckBox>Extract as XML(s)</CheckBox>
-                <CheckBox Margin="0,0,0,10">Extract all textures</CheckBox>
+                <Label Margin="-5,0,0,10" FontSize="30" FontWeight="DemiBold">Settings</Label>
+                <ToggleSwitch >Extract as XML(s)</ToggleSwitch>
+                <ToggleSwitch Margin="0,0,0,10">Extract all textures</ToggleSwitch>
             </StackPanel>
             <Separator></Separator>
             <StackPanel Margin="10, 10, 0 ,0">
