--- a/ArbolitoU/Windows/LoadingWindow.axaml
+++ b/ArbolitoU/Windows/LoadingWindow.axaml
@@ -6,9 +6,11 @@
         x:Class="ArbolitoU.Windows.LoadingWindow"
         xmlns:i="https://github.com/projektanker/icons.avalonia">
     <Grid>
-        <StackPanel VerticalAlignment="Center">
-            <i:Icon Value="mdi-palm-tree" Foreground="LawnGreen" FontSize="200" />
-            <TextBlock Text="Loading..." FontSize="50" Foreground="White" HorizontalAlignment="Center" />
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <i:Icon Value="mdi-tree" Foreground="LawnGreen" FontSize="200" />
+            <TextBlock Text="ArbolitoU" FontSize="50" Foreground="White" HorizontalAlignment="Center" />
+            <ProgressBar Margin="0,10,0,10" Height="7" IsIndeterminate="True" HorizontalAlignment="Center"/>
+            <TextBlock IsVisible="False" FontFamily="{StaticResource NunitoFont}" MaxHeight="25" Text="Idle" MaxLines="1" MaxWidth="1200" x:Name="tbLoadingStatus" FontSize="20" HorizontalAlignment="Center"/>
         </StackPanel>
 
     </Grid>
