--- a/ArbolitoU/Windows/LoadingWindow.axaml
+++ b/ArbolitoU/Windows/LoadingWindow.axaml
@@ -1,17 +1,17 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="720"
-        x:Class="ArbolitoU.Windows.LoadingWindow"
-        xmlns:i="https://github.com/projektanker/icons.avalonia">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="720"
+             x:Class="ArbolitoU.Windows.LoadingWindow">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <Image Height="256" Source="avares://ArbolitoU/icon-512.png"></Image>
             <TextBlock Text="ArbolitoU" FontSize="50" Foreground="White" HorizontalAlignment="Center" />
-            <ProgressBar x:Name="pbArbolitoLoading" Margin="0,10,0,10" Height="7" IsIndeterminate="True" HorizontalAlignment="Center"/>
-            <TextBlock IsVisible="False" FontFamily="{StaticResource NunitoFont}" MaxHeight="25" Text="Idle" MaxLines="1" MaxWidth="1200" x:Name="tbLoadingStatus" FontSize="20" HorizontalAlignment="Center"/>
+            <ProgressBar x:Name="pbArbolitoLoading" Margin="0,10,0,10" Height="7" IsIndeterminate="True"
+                         HorizontalAlignment="Center" />
+            <TextBlock IsVisible="False" FontFamily="{StaticResource NunitoFont}" MaxHeight="25" Text="Idle"
+                       MaxLines="1" MaxWidth="1200" x:Name="tbLoadingStatus" FontSize="20" HorizontalAlignment="Center" />
         </StackPanel>
-
     </Grid>
 </UserControl>
